adding self attention over relations

--- a/model1/experiments.conf
+++ b/model1/experiments.conf
@@ -192,6 +192,7 @@ wlp_best_relation = ${ace05_best_relation}{
   entity_ratio = 0.5
   learning_rate = 0.005
   max_arg_width = 8
+  ga_heads = 1
 }
 
 #Best Wet Lab Protocal (WLP) parameters for entity extraction
